force-app/main/default/objects/WhiteSpace_Option__mdt/WhiteSpace_Option__mdt.object-meta.xml
<CustomObject>
    <label>White Space Option</label>
    <pluralLabel>White Space Options</pluralLabel>
</CustomObject>