force-app/main/default/objects/WhiteSpace_Option__mdt/fields/Group_By_Value__c.field-meta.xml
<CustomField>
    <fullName>Group_By_Value__c</fullName>
    <label>Group By Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>