force-app/main/default/objects/WhiteSpace_Option__mdt/fields/Icon_Where_Condition__c.field-meta.xml
<CustomField>
    <fullName>Icon_Where_Condition__c</fullName>
    <label>Icon Where Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>