force-app/main/default/objects/WhiteSpace_Option__mdt/fields/Option_Description__c.field-meta.xml
<CustomField>
    <fullName>Option_Description__c</fullName>
    <label>Option Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>