force-app/main/default/objects/WhiteSpace_Option__mdt/fields/Show_On_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Dashboard</label>
    <type>Checkbox</type>
</CustomField>