force-app/main/default/objects/WhiteSpace_Option__mdt/fields/White_Space_Section__c.field-meta.xml
<CustomField>
    <fullName>White_Space_Section__c</fullName>
    <label>White Space Section</label>
    <referenceTo>White_Space_Section__mdt</referenceTo>
    <relationshipLabel>White Space Options</relationshipLabel>
    <relationshipName>White_Space_Options</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>