force-app/main/default/objects/WhiteSpace_Option__mdt/fields/WhiteSpace_Custom_Datatable__c.field-meta.xml
<CustomField>
    <fullName>WhiteSpace_Custom_Datatable__c</fullName>
    <label>WhiteSpace Custom Datatable</label>
    <referenceTo>WhiteSpace_Custom_Datatable__mdt</referenceTo>
    <relationshipLabel>White Space Options</relationshipLabel>
    <relationshipName>White_Space_Options</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>